Remove copy/email buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ limitations under the License.
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Web Speech API Demo</title>
+        <title>SDSRS - Spoken Dialog Speech Recognition System</title>
         <link rel="stylesheet" href="style.css">
         <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -58,22 +58,6 @@ limitations under the License.
           <p>
         </div>
         <div class="center">
-          <div class="sidebyside" style="text-align:right">
-            <button id="copy_button" class="button" onclick="copyButton()">
-              Copy and Paste</button>
-            <div id="copy_info" class="info">
-              Press Control-C to copy text.<br>(Command-C on Mac.)
-            </div>
-          </div>
-          <div class="sidebyside">
-            <button id="email_button" class="button" onclick="emailButton()">
-              Create Email</button>
-            <div id="email_info" class="info">
-              Text sent to default email application.<br>
-              (See chrome://settings/handlers to change.)
-            </div>
-          </div>
-          <p>
           <div id="div_language">
             <select id="select_language" onchange="updateCountry()"></select>
             &nbsp;&nbsp;
