--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@ limitations under the License.
           crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1 class="center" id="headline">
-          <a href="http://dvcs.w3.org/hg/speech-api/raw-file/tip/speechapi.html">
-            Web Speech API</a> Demonstration</h1>
+        <h1 class="center" id="headline"> SDSRS </h1>
         <div id="info">
           <p id="info_start">Click on the microphone icon and begin speaking.</p>
           <p id="info_speak_now">Speak now.</p>
@@ -49,8 +47,7 @@ limitations under the License.
              version 25 or later.</p>
         </div>
         <div class="right">
-          <button id="start_button" onclick="startButton(event)">
-            <img id="start_img" src="mic.gif" alt="Start"></button>
+            <button id="start_button" onclick="startButton(event)">Start recording</button>
         </div>
         <div id="results">
           <span id="final_span" class="final"></span>
