--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ limitations under the License.
         <div class="container">
             <div class="col-md-10">
                 <div id="info">
-                  <p id="info_start">Click on the microphone icon and begin speaking.</p>
+                  <p id="info_start"></p>
                   <p id="info_speak_now">Speak now.</p>
                   <p id="info_no_speech">No speech was detected. You may need to adjust your
                     <a href="//support.google.com/chrome/bin/answer.py?hl=en&amp;answer=1407892">
@@ -51,8 +51,7 @@ limitations under the License.
                 <div class="center">
                     <button id="start_button" onclick="startButton(event)">Start recording</button>
                 </div>
-                <div class="left">You said:</div>
-                <div id="results" class="right">
+                <div id="results">
                   <span id="final_span" class="final"></span>
                   <span id="interim_span" class="interim"></span>
                   <p>
