Style input and output

--- a/index.html
+++ b/index.html
@@ -51,10 +51,14 @@ limitations under the License.
                 <div class="center">
                     <button id="start_button" onclick="startButton(event)">Start recording</button>
                 </div>
-                <div id="results">
+                <div id="results" class="results">
                   <span id="final_span" class="final"></span>
-                  <span id="interim_span" class="interim"></span>
+                  <span id="interim_span" class="interim">Your speech will appear here</span>
                   <p>
+                </div>
+                <div id="response_from_sdsrs" class="results">
+                  <span id="response_final_span" class="final"></span>
+                  <span id="response_interim_span" class="interim">The response from the system will appear here</span>
                 </div>
             </div>
             <div class="center">
