Add label for countries

--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@ limitations under the License.
                     </div>
                 </div>
             </div>
-            <div class="center">
+            <br>
+            <div class="row">
               <div id="div_language">
+                Select the language you are using to speak:
                 <select id="select_language" onchange="updateCountry()"></select>
                 &nbsp;&nbsp;
                 <select id="select_dialect"></select>
