--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ limitations under the License.
                 SDSRS Copyright &copy; 2017 <a href="https://github.com/austin226">Austin Almond</a>.
                 <br>
                 Client based on <a href=https://github.com/GoogleChrome/webplatform-samples/tree/master/webspeechdemo">Google Web Speech API Demo</a>.
-                Anki service provided by <a href="https://github.com/dsnopek/anki-sync-server">dsnopek/anki-sync-server</a>
+                <a href="https://ankiweb.net">Anki</a> service provided by <a href="https://github.com/dsnopek/anki-sync-server">dsnopek/anki-sync-server</a>
                 via <a href="https://github.com/austin226/sdsrs-anki-server">austin226/sdsrs-anki-server</a>
                 and <a href="https://github.com/austin226/sdsrs">austin226/sdsrs</a>.
             </p>
