--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@ limitations under the License.
               </div>
             </div>
         </div>
-        <script src="speech.js"></script>
         <footer class="footer">
             <p class="text-muted">
                 SDSRS Copyright &copy; 2017 <a href="https://github.com/austin226">Austin Almond</a>.
@@ -106,5 +105,7 @@ limitations under the License.
                 and <a href="https://github.com/austin226/sdsrs">austin226/sdsrs</a>.
             </p>
         </footer>
+        <script src="get-sdsrs-response.js"></script>
+        <script src="speech.js"></script>
     </body>
 </html>
