Attribute api.ai

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@ limitations under the License.
             <p class="text-muted">
                 SDSRS Copyright &copy; 2017 <a href="https://github.com/austin226">Austin Almond</a>.
                 <br>
-                Client based on <a href=https://github.com/GoogleChrome/webplatform-samples/tree/master/webspeechdemo">Google Web Speech API Demo</a>.
+                Client based on <a href="https://github.com/GoogleChrome/webplatform-samples/tree/master/webspeechdemo">Google Web Speech API Demo</a>.
+                Speech processing provided by <a href="https://api.ai">api.ai</a>.
                 <a href="https://ankiweb.net">Anki</a> service provided by <a href="https://github.com/dsnopek/anki-sync-server">dsnopek/anki-sync-server</a>
                 via <a href="https://github.com/austin226/sdsrs-anki-server">austin226/sdsrs-anki-server</a>
                 and <a href="https://github.com/austin226/sdsrs">austin226/sdsrs</a>.
