--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ limitations under the License.
                 </div>
             </div>
             <br>
-            <div class="row">
+            <div class="row hidden">
               <div id="div_language">
                 Select the language you are using to speak:
                 <select id="select_language" onchange="updateCountry()"></select>
