--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ limitations under the License.
                     </p>
                     <p>Say <strong>Reset the scheduler</strong> to re-initialize the scheduler for the collection you selected.</p>
                 </div>
-                <div>
+                <div class="col-md-6">
                     <h4>Creating Cards</h4>
                     <p>Say <strong>Add a card</strong> to add a card to the selected collection.</p>
                     <p>You will be prompted for a Front and Back of the card. After you provide these, the card will be added.</p>
